Fixed responsive issue where page jumped around because of auto-typing JS

--- a/src/App.css
+++ b/src/App.css
@@ -488,13 +488,25 @@ input:focus {
   .collection-cards {
     height: 190px;
   }
-  .collection-cards h1 {
-    margin-top: 30px
+  .hero-card h1 {
+    margin-top: 30px;
+    font-size: 26px!important;
+  }
+  .hero-card h5 {
+    font-size: 18px;
   }
 
+  .main-hero {
+    padding-top: 70px;
+  }
   .collection-cards p {
     margin-top: 20px;
     /*padding-bottom: 20px;*/
+  }
+
+  .hero-card {
+    padding-top: 40px;
+    padding-bottom: 125px;
   }
 }
 
